tests/NormalTests/paczka1/fuzzy1/14606586.err
Error in line 9: cXqCDF A792 81,3
Error in line 5: LQOXkzK0qz A792 28,1
Error in line 19: qLQy5anqmg A192 30,9
Error in line 25: qLQy5anqmg A792 97,3
